--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ a{
     background-color: #222222;
     padding-top: 112px;
     padding-bottom: 112px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #4e4e4e;
 }
 .flex{
     display: flex;
