--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ a{
     align-items: center;
 }
 .foot-logo{
-    margin-left: 18px;
+    margin-left: 0px;
 }
 .foot-menu{
     display: flex;
@@ -279,7 +279,7 @@ a{
     margin: 0px;
 }
 .foot{
-    margin-left: 101px;
+    margin-left: 90px;
     padding: 0px 5px;
     position: relative;
 }
@@ -292,12 +292,12 @@ a{
     font-size: 25px; */
     position: absolute;
     left: -12px;
-    top: 13px;
+    top: 5px;
 }
 .foot-li{
     font-size: 16px;
     letter-spacing: 0px;
-    line-height: 36px;
+    margin-bottom: 12px;
     color: #ffffff;
     font-weight: 700;
     font-family: "Montserrat";
@@ -308,7 +308,7 @@ a{
 .foot-a{
     font-size: 16px;
     letter-spacing: 0px;
-    line-height: 36px;
+    line-height: 25px;
     color: #ffffff;
     font-weight: 400;
     font-family: "Montserrat";
