--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,15 @@ a{
 .ui-six{
     margin-bottom: 56px;
 }
+.php-one {
+    margin-bottom: 27px;
+}
+.php-two{
+    margin-bottom:54px;
+}
+.php-three{
+    margin-bottom:54px;
+}
 
 
 
