--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ a{
 .top-nav{
     display: flex;
     padding: 30px 50px 0px;
+    align-items: center;
 }
 .logo{
     width: 20%;
@@ -72,7 +73,7 @@ a{
     margin: 0 auto;
 }
 .banner-content{
-    padding-top: 105px;
+    padding-top: 100px;
     padding-bottom: 109px;
     display: flex;
 }
@@ -117,7 +118,7 @@ a{
 
 } */
 .promote-h2{
-    padding-top: 105px;
+    padding-top: 110px;
     margin-bottom: 118px;
     font-size: 40px;
     letter-spacing: -2px;
@@ -258,7 +259,7 @@ a{
 }
 .footer{
     background-color: #222222;
-    padding-top: 112px;
+    padding-top: 115px;
     padding-bottom: 112px;
     border-bottom: 1px solid #4e4e4e;
 }
@@ -412,7 +413,7 @@ a{
 
 .accordion {
     cursor: pointer;
-    padding: 31px 20px;
+    padding: 28px 20px;
     width: 100%;
     border: none;
     text-align: left;
