--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,12 @@ a{
     align-items: center;
 }
 .logo{
-    width: 20%;
+    width: 15%;
 }
+.logo-com{
+    width: 92%;
 .menu{
-    width: 80%;
+    width: 85%;
 }
 .menu-ul{
     display: flex;
