--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,13 @@ a{
     color: #fd8200;
 }
 .menu-a:hover{
-    border-bottom: 3px solid #000!important;
+    color: #fd8200;
+    border-bottom: 3px solid #fd8200!important;
     transition: 0.6s ease-in-out;
 }
 .menu-color:hover{
-    border-bottom: 3px solid #fd8200!important;
+    color: #000;
+    border-bottom: 3px solid #000!important;
     transition: 0.6s ease-in-out;
 }
 .toggle{
