--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,10 @@ a{
 }
 .menu-a:hover{
     color: #fd8200;
-    border-bottom: 3px solid #fd8200!important;
     transition: 0.6s ease-in-out;
 }
 .menu-color:hover{
     color: #000;
-    border-bottom: 3px solid #000!important;
     transition: 0.6s ease-in-out;
 }
 .toggle{
@@ -327,8 +325,8 @@ a{
     text-decoration: none;
 }
 .foot-a:hover{
-    border-bottom: 3px solid #fff;
-    transition: 0.6s ease-in-out;
+    transition: .6s ease;
+    color: #f78444;
 }
 .foot-p{
     font-size: 16px;
