--- a/css/style.css
+++ b/css/style.css
@@ -694,6 +694,10 @@ a{
     .job-h6 br{
         display: none;
     }
+    .job-li{
+        margin-left: 30px;
+        margin-right: 0px;
+    }
     .foot-p{
         font-size: 12px;
     }
@@ -976,7 +980,7 @@ a{
         display: block;
     }  
     .job-li{
-        width: 50%;
+        width: 90%;
     }  
     .quote{
         padding: 85px 0px;
