--- a/css/style.css
+++ b/css/style.css
@@ -25,19 +25,19 @@ a{
 
 
 .nav {
-    width: 95%;
+    width: 100%;
     position: fixed;
     display: flex;
     align-items: center;
-    max-width: 1820px;
+    justify-content: space-between;
+    max-width: 1920px;
     padding-right: 50px;
     padding-left: 50px;
     padding-top: 30px;
-    justify-content: space-between;
-    background-color: #fff;
+    box-sizing: border-box;
 }
 .affix{
-    width: 95%;
+    width: 100%;
     position: fixed;
     display: flex;
     align-items: center;
