--- a/css/style.css
+++ b/css/style.css
@@ -588,15 +588,15 @@ a{
 
 
 @media only screen and (max-width:1631px){
-    .nav{
+/*     .nav{
         width: 94%;
-    }
+    } */
 }
 
 @media only screen and (max-width:1450px) {
-    .nav, .affix{
+/*     .nav, .affix{
         width: 93%;
-    }
+    } */
     .container{
         max-width: 1200px;
         margin: 0 auto;
@@ -731,9 +731,9 @@ a{
     
 }
 @media only screen and (max-width:1100px) {
-    .nav, .affix {
+/*     .nav, .affix {
         width: 91%;
-    }    
+    }     */
 }
 @media only screen and (max-width:1050px){
     .logo-com{
@@ -962,9 +962,9 @@ a{
     }
 }
 @media only screen and (max-width:760px) { 
-    .nav {
+/*     .nav {
         width: 87%;
-    }
+    } */
     .end-one{
         margin-bottom: 32px;
     }
@@ -1036,7 +1036,7 @@ a{
     }
     .nav{
         padding: 30px 15px 30px 15px;
-        width: 96%;
+/*         width: 96%; */
     }
     .toggle{
         display: block;
