--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,7 @@ a{
     color: #f78444;
 }
 .foot-p{
+    margin-left: 6%;
     font-size: 16px;
     letter-spacing: 0px;
     line-height: 28px;
