--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ a{
     text-decoration: none;
     text-transform: uppercase;
     border-bottom: 3px solid transparent;
+    transition: 0.6s ease-in-out;
 }
 .menu-color{
     color: #fd8200;
@@ -201,6 +202,7 @@ a{
     border-radius: 5px;
     padding: 28px 30px;
     padding-bottom: 24px;
+    transition: .5s;
 }
 .list1:last-child{
     margin-right: 0px;
@@ -238,8 +240,8 @@ a{
     margin-top: 5px;
 }
 .list1:hover{
-    transition: 0.3s;
-    box-shadow: 0 5px 15px rgb(0 0 0 / 50%);
+    transition: .5s;
+    box-shadow: 0px 2px 11px rgb(0 0 0 / 15%);
     /* border: none; */
 }
 .row3{
@@ -327,6 +329,7 @@ a{
     font-weight: 400;
     font-family: "Montserrat";
     text-decoration: none;
+    transition: 0.6s ease-in-out;
 }
 .foot-a:hover{
     transition: .6s ease;
@@ -385,13 +388,14 @@ a{
     font-weight: 400;
     font-family: "Montserrat";
 }
+
 .front-h6{
     font-family: "Montserrat";
     font-size: 20px;
     letter-spacing: 0px;
     margin-top: 50px;
-
 }
+
 .front-ul{
     padding-left: 18px;
     margin-top: 25px;
@@ -537,22 +541,18 @@ a{
     padding-bottom: 0px;
 }
 .ui{
-    /* padding: 30px 0px; */
     border-bottom: 1px solid #c0c0c0;
     /* position: relative; */
 }
 .php{
-    /* padding: 30px 0px; */
     border-bottom: 1px solid #c0c0c0;
     /* position: relative; */
 }
 .frontend{
-    /* padding: 30px 0px; */
     border-bottom: 1px solid #c0c0c0;
     /* position: relative; */
 }
 .qa-test{
-    /* padding: 30px 0px; */
     border-bottom: 1px solid #c0c0c0;
     /* position: relative; */
 }
