--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@ a{
     padding-top: 115px;
     padding-bottom: 110px;
     background-color: #fd8200;
+    margin-bottom: 3px;
 }
 .quote-h2{
     font-size: 40px;
