--- a/css/style.css
+++ b/css/style.css
@@ -577,7 +577,7 @@ a{
 .ui-six{
     margin-bottom: 56px;
 }
-php-one: {
+.php-one {
     margin-bottom: 24px;
 }
 .php-two {
@@ -586,7 +586,7 @@ php-one: {
 .php-three {
     margin-bottom: 47px;
 }
-third {
+.third {
     padding-bottom: 26px;
 }
 
