--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,7 @@ a{
     color: #ffffff;
     font-weight: 700;
     font-family: "Montserrat";
+    line-height: 36px;
 }
 .li3{
     font-weight: 500;
