--- a/css/style.css
+++ b/css/style.css
@@ -738,8 +738,8 @@ a{
     .job-li {
         width: 42%;
     }
-    .ui-eigth{
-        margin-bottom: 53px;
+    .ui-two{
+        margin-bottom: 6px;
     }
     .ui-six{
         margin-bottom: 32px;
@@ -750,10 +750,21 @@ a{
     .ui-seven{
         margin-bottom: 30px;
     }
-    .qa-four{
-        margin-bottom: 10px;
+    .qa-first {
+        margin-bottom: 30px;
     }
-    
+    .qa-three {
+        margin-bottom: 30px;
+    }
+    .end-two {
+        margin-bottom: 30px;
+    }
+    .job-h6{
+        font-size: 14px;
+    }
+    .php-two {
+        margin-bottom: 32px;
+    }
 }
 @media only screen and (max-width:1100px) {
 /*     .nav, .affix {
@@ -919,6 +930,15 @@ a{
     .qa-two{
         margin-bottom: 10px;
     }
+    .php-three {
+        margin-bottom: 30px;
+    }
+    .end-three {
+        margin-bottom: 54px;
+    }
+    .qa-first {
+        margin-bottom: 12px;
+    }
 }
 @media only screen and (max-width:873px) {
     .job-list{
@@ -930,7 +950,7 @@ a{
     .list1{
         /* width: 50%; */
         margin: auto;
-        margin-bottom: 30px;
+        margin-bottom: 0px;
     }
     .list1:last-child{
         margin-right: auto;
