--- a/css/style.css
+++ b/css/style.css
@@ -289,9 +289,9 @@ a{
     margin-left: 0px;
     margin-top: 9px;
 }
-.foot-logo img{
+/* .foot-logo img{
     width: 94%;
-}
+} */
 .foot-menu{
     display: flex;
     margin-left: auto;
