--- a/css/style.css
+++ b/css/style.css
@@ -1296,11 +1296,11 @@ a{
     .logo{
         width: 60%;
     }
-    .menu-toggle{
+/*     .menu-toggle{
         font-size: 25px;
         top: 28px;
         right: 40px;
-    }
+    } */
 }
 @media only screen and (max-width:400px) {
     .foot{
