--- a/css/style.css
+++ b/css/style.css
@@ -1058,6 +1058,8 @@ a{
         line-height: 0px;
     }
     .copy{
+        padding-left: 30px;
+    }
         
     .foot-p{
         text-align: start;
