--- a/css/style.css
+++ b/css/style.css
@@ -1318,8 +1318,8 @@ a{
         width: 60%;
     }
     .menu-toggle{
-        font-size: 20px;
-        top: 25px;
+/*         font-size: 20px; */
+        top: 35px;
     }
     .foot-logo img{
         width: 200px;
