--- a/css/style.css
+++ b/css/style.css
@@ -1311,6 +1311,9 @@ a{
     } */
 }
 @media only screen and (max-width:400px) {
+    .promote-h2 br{
+        display: none;
+    }
     .job-li {
         width: 90%;
         margin: 30px auto;
