--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ a{
         font-size: 18px;
     }
     .job-li{
-        width: 27%;
+        width: 31%;
     }
     .ui-third{
         margin-bottom: 55px;
@@ -694,7 +694,7 @@ a{
          margin-bottom: 6px;
     }
     .php-one {
-        margin-bottom: 10px;
+        margin-bottom: 30px;
      }
     .php-two {
         margin-bottom: 30px;
@@ -703,15 +703,15 @@ a{
         margin-bottom: 54px;
      }
 
-    .ui-one {
+/*     .ui-one {
         margin-bottom: 6px;
-    }
+    } */
     .end-two{
         margin-bottom: 6px;
     }
 
     .end-three {
-        margin-bottom: 6px;
+        margin-bottom: 30px;
     }
 }
 @media only screen and (max-width:1370px) {
