--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,31 @@ a{
 .job-2{
     margin-bottom: 30px;
 }
+.ui-one{
+    margin-bottom: 20px;
+}
+.ui-two{
+    margin-bottom: 20px;
+}
+.end-one{
+    margin-bottom: 48px;
+}
+.end-two{
+    margin-bottom: 48px;
+}
+.end-three{
+    margin-bottom: 48px;
+}
+.end-four{
+    margin-bottom: 48px;
+}
+.qa-one{
+    margin-bottom: 24px;
+}
+.qa-two{
+    margin-bottom: 24px;
+}
+
 .area{
     border-top: 1px solid #c0c0c0;
     padding-top: 10px;
