--- a/css/style.css
+++ b/css/style.css
@@ -709,11 +709,11 @@ a{
     .qa-three{
         margin-bottom: 29px;
     }
-    .end-five{
-        margin-bottom: 10px;
+    .end-one{
+        margin-bottom: 30px;
     }
     .qa-first{
-        margin-bottom: 10px;
+        margin-bottom: 24px;
     }
     .qa-three{
          margin-bottom: 6px;
