--- a/css/style.css
+++ b/css/style.css
@@ -251,11 +251,11 @@ a{
 .end-four{
     margin-bottom: 48px;
 }
-.qa-one{
-    margin-bottom: 24px;
+.qa-first{
+    margin-bottom: 33px;
 }
 .qa-two{
-    margin-bottom: 24px;
+    margin-bottom: 33px;
 }
 
 .area{
